RESOLVED FIXED201161
Selenium test 'interactions_tests.py::testContextClick' is hanging
https://bugs.webkit.org/show_bug.cgi?id=201161
Summary Selenium test 'interactions_tests.py::testContextClick' is hanging
Blaze Burg
Reported 2019-08-26 16:55:17 PDT
I don't recall that this used to hang, but now it does. The fix is similar to that for popup menus.
Attachments
Patch (2.94 KB, patch)
2019-08-26 17:04 PDT, Blaze Burg
cdumez: review+
Radar WebKit Bug Importer
Comment 1 2019-08-26 16:55:29 PDT
Blaze Burg
Comment 2 2019-08-26 17:04:15 PDT
Blaze Burg
Comment 3 2019-09-04 11:08:26 PDT
Note You need to log in before you can comment on or make changes to this bug.